@@ -44,7 +44,7 @@ RotationSelector::RotationSelector(QWidget *parent)
     layout->addWidget(rot_label, 0, 0, 1, 1);
 
     _xrot_spinbox = new QDoubleSpinBox();
-    _xrot_spinbox->setRange(0.0, 359.9);
+    _xrot_spinbox->setRange(-179.99, 179.99);
     _xrot_spinbox->setWrapping(true);
     _xrot_spinbox->setSingleStep(1.0);
     _xrot_spinbox->setValue(0.0);
@@ -52,16 +52,24 @@ RotationSelector::RotationSelector(QWidget *parent)
     layout->addWidget(_xrot_spinbox, 0, 1, 1, 2);
 
     _yrot_spinbox = new QDoubleSpinBox();
-    _yrot_spinbox->setRange(0.0, 359.9);
+    _yrot_spinbox->setRange(-179.99, 179.99);
     _yrot_spinbox->setWrapping(true);
     _yrot_spinbox->setSingleStep(1.0);
     _yrot_spinbox->setValue(0.0);
     connect(_yrot_spinbox, SIGNAL(valueChanged(double)), this, SLOT(_set_y_rotation(double)));
     layout->addWidget(_yrot_spinbox, 0, 3, 1, 2);
+
+    _zrot_spinbox = new QDoubleSpinBox();
+    _zrot_spinbox->setRange(-179.99, 179.99);
+    _zrot_spinbox->setWrapping(true);
+    _zrot_spinbox->setSingleStep(1.0);
+    _zrot_spinbox->setValue(0.0);
+    connect(_zrot_spinbox, SIGNAL(valueChanged(double)), this, SLOT(_set_z_rotation(double)));
+    layout->addWidget(_zrot_spinbox, 0, 5, 1, 2);
     
     _reset_button = new QPushButton(tr("Reset"));
     connect(_reset_button, SIGNAL(clicked()), this, SLOT(_reset_button_clicked()));
-    layout->addWidget(_reset_button, 0, 5, 1, 1);
+    layout->addWidget(_reset_button, 0, 7, 1, 1);
 
     layout->setRowStretch(1, 1);
     setLayout(layout);
@@ -75,19 +83,20 @@ void RotationSelector::reset()
 {
     _xrot_spinbox->setValue(0.0);
     _yrot_spinbox->setValue(0.0);
+    _zrot_spinbox->setValue(0.0);
 }
 
 void RotationSelector::_reset_button_clicked()
 {
     reset();
-    emit view_changed();
+    emit rotation_changed();
 }
 
 void RotationSelector::_set_x_rotation(double rx UNUSED)
 {
     if (!_lock)
     {
-	emit view_changed();
+	emit rotation_changed();
     }
 }
 
@@ -95,26 +104,55 @@ void RotationSelector::_set_y_rotation(double ry UNUSED)
 {
     if (!_lock)
     {
-	emit view_changed();
+	emit rotation_changed();
+    }
+}
+
+void RotationSelector::_set_z_rotation(double rz UNUSED)
+{
+    if (!_lock)
+    {
+	emit rotation_changed();
     }
 }
 
 void RotationSelector::set_x_rotation(float rx)
 {
-    while (rx >= 360.0f)
+    while (rx >= 180.0f)
 	rx -= 360.0f;
-    while (rx < 0.0f)
+    while (rx < -180.0f)
 	rx += 360.0f;
     _xrot_spinbox->setValue(rx);
-    emit view_changed();
+    emit rotation_changed();
 }
 
 void RotationSelector::set_y_rotation(float ry)
 {
-    while (ry >= 360.0f)
+    while (ry >= 180.0f)
 	ry -= 360.0f;
-    while (ry < 0.0f)
+    while (ry < -180.0f)
 	ry += 360.0f;
     _yrot_spinbox->setValue(ry);
-    emit view_changed();
+    emit rotation_changed();
+}
+
+void RotationSelector::set_z_rotation(float rz)
+{
+    while (rz >= 180.0f)
+	rz -= 360.0f;
+    while (rz < -180.0f)
+	rz += 360.0f;
+    _zrot_spinbox->setValue(rz);
+    emit rotation_changed();
+}
+
+void RotationSelector::update_rotation(const quat &rotation)
+{
+    float rx, ry, rz;
+    rotation.to_euler_angles(&rx, &ry, &rz);
+    _lock = true;
+    _xrot_spinbox->setValue(mh_rad_to_deg(rx));
+    _yrot_spinbox->setValue(mh_rad_to_deg(ry));
+    _zrot_spinbox->setValue(mh_rad_to_deg(rz));
+    _lock = false;
 }
